# WeDraw

./: README.MD  docker-compose.ci.yml
.github/workflows/: ci.yml
docs/er_diagrams/: er_diagram_v1.puml
docs/er_piplines/: er_pipeline_v1.puml
src/: Dockerfile  Makefile  main.py  pyproject.toml  setup.cfg
src/api/: router.py
src/core/: config.py
src/db/: redis.py
src/db/models/: attachment_auction.py  attachment_message.py  attachment_post.py  auction.py  base.py  chat.py  message.py  mixins.py  post.py  subscriber.py  transaction.py  user.py  user_chat.py
src/migrations/: env.py
src/schemas/: base.py
src/tests/: conftest.py  test_example.py  utils.py
