[tool.poetry]
name = "we-draw"
version = "0.1.0"
description = "Project for all kind artists where they can share their art-works, have a paid subs and start auctions"
authors = ["Timur Gizatullin <2001rich04@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.101.1"
alembic = "^1.11.2"
uvicorn = "^0.23.2"
pydantic = "^2.1.1"
sqlalchemy = "^2.0.20"
asyncpg = "^0.28.0"
greenlet = "^2.0.2"
httpx = "^0.24.1"
pydantic-settings = "^2.0.3"
aioboto3 = "^11.2.0"
redis = "^5.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
isort = "^5.12.0"
black = "^23.7.0"
flake8 = "^6.1.0"
pytest-asyncio = "^0.21.1"
pytest-factoryboy = "^2.5.1"
mypy = "^1.5.0"
types-redis = "^4.6.0.4"
types-aiofiles = "^23.1.0.5"

[tool.isort]
profile = "black"

[tool.black]
line-length = 120